ecmascript/parser/tests/typescript-errors/recovery/class/simple.ts.stderr
error: Expected identifier after this token
 --> $DIR/tests/typescript-errors/recovery/class/simple.ts:1:1
  |
1 | class {
  | ^^^^^

